--- a/templates/new.html
+++ b/templates/new.html
@@ -1,14 +1,14 @@
 {% extends "base.html" %}
 {% block main %}
-<div class="make">
+<form method="post" class="make">
     <h1 class="new_title">Make A New Set</h1><button class="make_next">Next<ion-icon name="arrow-forward-outline"></ion-icon></button>
     <div class="make_title">
         <span class="make_title_title">Title</span>
-        <input class="text" type="text" required>
+        <input name="title" class="text" type="text" required>
     </div>
     <div class="make_desc">
         <span class="make_title_title">Description</span>
-        <textarea class="text" style="height:200px;"></textarea>
+        <textarea name="desc" class="text" style="height:200px;"></textarea>
     </div>
     <h2 class="choose_back">Choose A Background</h2>
     <div class="backgrounds">
@@ -21,5 +21,5 @@
         <a><img src="static/backgrounds/physics.png" onclick="document.getElementById('physics').checked = true"><input id="physics" value="physics" type="radio" name="background"></a>
         <a><img src="static/backgrounds/sport.png" onclick="document.getElementById('sport').checked = true"><input id="sport" value="sport" type="radio" name="background"></a>
     </div>
-</div>
+</form>
 {% endblock%}
