--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,7 @@
 :root{
     --background:#292929;
     --top_back:#454545;
+    --top_back_rgba:69,69,69;
     --light:#fff;
     --button_back:#383838;
     --color:#00bb00;
@@ -42,7 +43,6 @@ body{
     top:0;
     left:0;
     box-shadow:4px 4px 4px rgba(0,0,0,0.5);
-    border-radius:0px 0px 10px 10px;
     padding-right:10px;
     box-sizing:border-box;
 }
@@ -219,7 +219,6 @@ body{
     flex-wrap:wrap;
 }
 
-
 .home_sets a:not(#home_edit, #home_del){
     position:relative;
     width:300px;
@@ -233,37 +232,29 @@ body{
     margin:15px;
 }
 
-.home_sets a:not(#home_edit, #home_del)::before{
+#home_sets_span{
     content:"";
     position:absolute;
     bottom:0px;
-    right:0px;
-    width:100%;
-    height:100px;
-    background:linear-gradient(90deg, transparent 80%, var(--top_back));
-    z-index:5;
+    width:280px;
+    height:30px;
     overflow:hidden;
+    background:rgb(43, 43, 43,0.6);
+    backdrop-filter:blur(3px);
+    left:50%;
+    translate:-50% 0px;
+    border-radius:10px 10px 0px 0px;
+    z-index:4;
+    transition:.3s ease;
 }
 
-@keyframes home_del_load{
-    from{opacity:0;bottom:-5px}
-    to{opacity:1;bottom:5px}
-}
-
-.home_sets a:hover #home_edit{
-    animation:alternate 0.4s home_del_load;
-    opacity:1;
-    bottom:5px;
-}
-
-.home_sets a:hover #home_del{
-    animation:alternate 0.4s home_del_load;
-    opacity:1;
-    bottom:5px;
+.home_sets a:not(#home_edit, #home_del):hover #home_sets_span{
+    height:100px;
+    background:rgba(43,43,43,0.8);
 }
 
 .home_sets a:hover{
-    box-shadow:none;
+    box-shadow:none !important;
     translate:0px 2px;
     filter:brightness(90%);
 }
@@ -278,26 +269,90 @@ body{
     position:absolute;
     top:0px;
     left:0px;
-    height:200px;
+    height:100%;
     width:100%;
     user-select:none;
-    background:#f
 }
 
 .home_sets a strong{
     position:absolute;
-    top:210px;
+    top:5px;
     left:10px;
     color:#fff;
+    z-index:5;
 }
 
 .home_sets a p{
     position:absolute;
-    top:225px;
+    top:20px;
     left:10px;
     color:#fff;
-    white-space:nowrap;
+    overflow:hidden;
+    text-overflow:ellipsis;
+    white-space: nowrap;
     width:calc(100% - 15px);
+    z-index:5;
+}
+
+@keyframes home_del_load{
+    from{opacity:0;bottom:-5px;scale:0.5;rotate:90deg;}
+    to{opacity:1;bottom:5px;scale:1;rotate:0deg;}
+}
+
+.home_sets a:hover #home_edit{
+    animation:alternate 0.4s home_del_load;
+    opacity:1;
+    bottom:5px;
+}
+
+.home_sets a:hover #home_del{
+    animation:alternate 0.4s home_del_load;
+    opacity:1;
+    bottom:5px;
+}
+
+#home_edit,#home_del{
+    background:rgba(56,56,56,0.4);
+    width:20px;
+    height:20px;
+    color:#fff;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    padding:5px;
+    border-radius:50%;
+    margin:3px;
+    box-shadow:1px 1px 2px rgba(0,0,0,0.3);
+    cursor:pointer;
+    position:absolute;
+    bottom:-5px;
+    z-index:15;
+    transition:.2s;
+    opacity:0;
+    z-index:3;
+    backdrop-filter:blur(4px);
+}
+
+#home_edit:hover,#home_del:hover{
+    translate:0 2px;
+    box-shadow:none;
+    filter:brightness(90%);
+}
+
+#home_del{
+    right:5px;
+}
+
+#home_del:hover{
+    color:#d10000;
+}
+
+#home_edit{
+    right:40px;
+}
+
+#home_edit:hover{
+    color:var(--color);
 }
 
 .home_new{
@@ -311,6 +366,7 @@ body{
     box-shadow:3px 3px 4px rgba(0,0,0,0.5);
     cursor:pointer;
     transition:.2s;
+    color:#fff;
 }
 
 .home_new:hover{
@@ -318,6 +374,8 @@ body{
     translate:0px 2px;
     box-shadow:none;
     filter:brightness(90%);
+    rotate:90deg;
+    color:var(--color);
 }
 
 .home_new:active{
@@ -332,7 +390,6 @@ body{
     left:50%;
     translate:-50% -50%;
     font-size:30px;
-    color:var(--light);
 }
 
 .make{
@@ -568,7 +625,7 @@ body{
 .text_answer{
     margin-top:10px;
     display:block;
-    width:100%;
+    width:calc(100% - 8px);
     height:50px;
     background:var(--top_back);
     border:2px solid var(--border);
@@ -584,7 +641,6 @@ body{
     border-color:var(--color);
     translate:0 2px;
     box-shadow:none;
-    scale:0.99;
     filter:brightness(90%);
     outline:none;
 }
@@ -600,7 +656,8 @@ body{
     justify-content:center;
     align-items: center;
     color:#fff;
-    font-size:3vw;
+    font-size:3vmax;
+    box-sizing:border-box;
 }
 
 .question_main button:not(.what_question),.sumbit_ans{
@@ -670,48 +727,6 @@ body{
     color:#fff;
 }
 
-#home_edit,#home_del{
-    background:var(--button_back);
-    width:20px;
-    height:20px;
-    color:#fff;
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    padding:5px;
-    border-radius:50%;
-    margin:3px;
-    box-shadow:2px 2px 3px rgba(0,0,0,0.5);
-    cursor:pointer;
-    position:absolute;
-    bottom:-5px;
-    z-index:15;
-    transition:.2s;
-    opacity:0;
-}
-
-#home_edit:hover,#home_del:hover{
-    translate:0 2px;
-    box-shadow:none;
-    filter:brightness(90%);
-}
-
-#home_del{
-    right:5px;
-}
-
-#home_del:hover{
-    color:#d10000;
-}
-
-#home_edit{
-    right:40px;
-}
-
-#home_edit:hover{
-    color:var(--color);
-}
-
 .you_did_it{
     position:absolute;
     left:50%;
@@ -758,9 +773,9 @@ body{
 }
 
 @keyframes star{
-    from{scale:1}
-    50%{scale:0.8;}
-    to{scale:1;}
+    from{scale:1;opacity:1;}
+    50%{scale:0.8;opacity:.5;}
+    to{scale:1;opacity:1;}
 }
 
 #star{
@@ -781,3 +796,6 @@ body{
     text-shadow:0px 0px 10px #00bb00;
 }
 
+.details{
+    width:100%;
+}
