--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,7 @@
         <a style="padding:0px;" id="profile_pic" href="https://replit.com/@{{name}}"><img src="{{profile_pic}}" onerror="this.src='{{url_for('static',filename='fallback.png')}}'"></a>
         <a href="https://replit.com/@GoodVessel92551"><ion-icon name="person-add-outline"></ion-icon>Follow</a>
         <a href="/__repl" id="like"><ion-icon name="heart-outline"></ion-icon>Like</a>
+        <a href="/community"><ion-icon name="earth-outline"></ion-icon>Community</a>
         <a href="/new"><ion-icon name="add-outline"></ion-icon>New</a>
         <a href="/home"><ion-icon name="home-outline"></ion-icon>Home</a>
     </nav>
