--- a/templates/new.html
+++ b/templates/new.html
@@ -4,11 +4,11 @@
     <h1 class="new_title">Make A New Set</h1><button class="make_next">Next<ion-icon name="arrow-forward-outline"></ion-icon></button>
     <div class="make_title">
         <span class="make_title_title">Title</span>
-        <input name="title" class="text" type="text" required>
+        <input name="title" class="text" type="text" required maxlength="100">
     </div>
     <div class="make_desc">
         <span class="make_title_title">Description</span>
-        <textarea name="desc" class="text" style="height:200px;"></textarea>
+        <textarea name="desc" class="text" style="height:200px; " maxlength="500"></textarea>
     </div>
     <h2 class="choose_back">Choose A Background</h2>
     <div class="backgrounds">
