--- a/templates/question.html
+++ b/templates/question.html
@@ -4,11 +4,11 @@
     <h1 class="new_title">Make A Question</h1></ion-icon><button value="finsh" name="button" class="make_finish">Finish<ion-icon name="checkmark-done-outline"></ion-icon><button value="next" name="button" class="make_next">Next<ion-icon name="arrow-forward-outline"></ion-icon></button>
     <div class="make_title">
         <span class="make_title_title">Question</span>
-        <input name="title" required class="text" type="text" id="title">
+        <input name="title" required class="text" type="text" id="title" maxlength="100">
     </div>
     <div class="make_desc">
         <span class="make_title_title">Answer</span>
-        <textarea name="ans" required class="text" style="height:200px;" id="desc" ></textarea>
+        <textarea name="ans" required class="text" style="height:200px;" id="desc" maxlength="200"></textarea>
     </div>
 
 </form>
